WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38937
REGRESSION(
r58895
): W7 window preview paints content at the wrong location
https://bugs.webkit.org/show_bug.cgi?id=38937
Summary
REGRESSION(r58895): W7 window preview paints content at the wrong location
Alice Liu
Reported
2010-05-11 14:50:56 PDT
regression from
http://trac.webkit.org/changeset/58895
1) load any page 2) scroll a small amount 3) hover over the taskbar to bring up the window preview thumbnail --> preview is shown from the top of the page instead of from the scroll offset, and the scrolled offset is black. <
rdar://problem/7959628
>
Attachments
patch
(5.20 KB, patch)
2010-05-11 14:52 PDT
,
Alice Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alice Liu
Comment 1
2010-05-11 14:52:59 PDT
Created
attachment 55761
[details]
patch
Alice Liu
Comment 2
2010-05-11 18:54:04 PDT
http://trac.webkit.org/changeset/59175
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug