https://bugs.webkit.org/show_bug.cgi?id=38937 W7 window preview paints content at the wrong location

Reviewed by Steve Falkenburg.

* WebFrame.cpp:
(WebFrame::paintDocumentRectToContext): Revert r58895
(WebFrame::paintDocumentRectToContextAtPoint): Added

* Interfaces/IWebFramePrivate.idl: Added paintDocumentRectToContextAtPoint
* Interfaces/IWebViewPrivate.idl: ditto
* Interfaces/WebKit.idl: touch to rebuild
* WebFrame.h: ditto
* WebView.cpp: ditto
(WebView::paintDocumentRectToContextAtPoint): ditto
* WebView.h: ditto



Canonical link: https://commits.webkit.org/50413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59175 268f45cc-cd09-0410-ab3c-d52691b4dbfc