WebKit/win/WebFrame.h
@@ -245,6 +245,11 @@ public:
         /* [in] */ RECT rect,
         /* [in] */ OLE_HANDLE deviceContext);
 
+    virtual HRESULT STDMETHODCALLTYPE paintDocumentRectToContextAtPoint(
+        /* [in] */ RECT rect,
+        /* [in] */ POINT pt,
+        /* [in] */ OLE_HANDLE deviceContext);
+
     virtual HRESULT STDMETHODCALLTYPE elementDoesAutoComplete(
         /* [in] */ IDOMElement* element, 
         /* [retval][out] */ BOOL* result);
