third_party/WebKit/WebKit/win/WebView.h
@@ -695,6 +695,11 @@ public:
         /* [in] */ RECT rect,
         /* [in] */ OLE_HANDLE dc);
 
+    virtual HRESULT STDMETHODCALLTYPE paintDocumentRectToContextAtPoint(
+        /* [in] */ RECT rect,
+        /* [in] */ POINT pt,
+        /* [in] */ OLE_HANDLE dc);
+
     virtual HRESULT STDMETHODCALLTYPE setCustomHTMLTokenizerTimeDelay(
         /* [in] */ double timeDelay);
 
